--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -277,13 +277,7 @@ for (var in catVars){
 INTRODUCCIÓ
 
 ```{r regression}
-regVars <- c("Survived", "Fare", "Parch", "SibSp", "Sex", "Embarked", "CabinLetter", "TicketSrc", "AgeCat", "FamilySizeCat", "TitleCat")
-
-train <- data[data$Train <- TRUE, regVars]
-
-for (var in catVars){
-  train[[var]] <- as.factor(train[[var]])
-}
+train <- data[data$Train == TRUE,]
 
 n <- nrow(train)
 ntrain <- round(n * 0.8)
@@ -292,15 +286,37 @@ ntest <- n - ntrain
 t_train <- train[1:ntrain,]
 t_test <- train[ntrain:n,]
 
-model <- glm(t_train$Survived ~ t_train$Fare + t_train$Parch + t_train$SibSp + as.factor(t_train$Sex) + as.factor(t_train$Embarked) + as.factor(t_train$CabinLetter) + as.factor(t_train$TicketSrc) + as.factor(t_train$AgeCat) + as.factor(t_train$FamilySizeCat) + as.factor(t_train$TitleCat))
+attach(t_train, warn.conflicts = FALSE)
+model <- glm(Survived ~ Fare + Parch + SibSp + Sex + Embarked + CabinLetter + TicketSrc + AgeCat + FamilySizeCat + TitleCat)
 
 summary(model)
 prob <- predict(model, t_test, type="response")
-#r <- roc(model, prob, data=train)
-#plot(r)
+ground <- t_test$Survived == 1
 
-precision <- posPredValue(prob, t_test$Survived, positive="1")
-recall <- sensitivity(prob, t_test$Survived, positive="1")
+for (t in c(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9)){
+  pred <- prob > t
+  accuracy <- sum(pred == ground) / length(pred)
+  cat(t); cat(": "); cat(accuracy); cat("\n")
+}
+```
 
-F1 <- (2 * precision * recall) / (precision + recall)
+PREDICCIÓ FINAL
+
+```{r result}
+detach()
+attach(train, warn.conflicts = FALSE)
+
+test <- data[data$Train == FALSE,]
+
+model <- glm(Survived ~ Fare + Parch + SibSp + Sex + Embarked + CabinLetter + TicketSrc + AgeCat + FamilySizeCat + TitleCat)
+
+apply_threshold <- function(row){
+  if (as.numeric(row["Prob"]) > 0.5) return(1)
+  return(0)
+}
+
+test$Prob <- predict(model, test, type="response")
+test$Survived <- apply(test, FUN=apply_threshold, MARGIN=1)
+
+write.csv(test[, c("PassengerId", "Survived")], "data/result.csv", row.names = FALSE, quote = FALSE)
 ```
